--- a/application.yml
+++ b/application.yml
@@ -1,3 +1,8 @@
-spring:
-  application:
-    name: demo
+eureka:
+    instance:
+        prefer-ip-address: true
+    client:
+        server-url:
+            defaultZone: http://localhost:8761/eureka/
+        fetch-registry: true
+        register-with-eureka: true
