--- a/application-dev.yml
+++ b/application-dev.yml
@@ -1,1 +1,8 @@
-
+eureka:
+    instance:
+        prefer-ip-address: true
+    client:
+        server-url:
+            defaultZone: http://localhost:8761/eureka/
+        fetch-registry: true
+        register-with-eureka: true
